<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_item_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
        <item android:id="@+id/nav_item_record"
            android:icon="@drawable/ic_history"
            android:title="@string/historial"/>
        <item android:id="@+id/nav_item_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share"/>
    </group>
    <item android:title="">
        <menu>
            <item android:id="@+id/nav_item_backprofiles"
                android:icon="@drawable/ic_arrow_back"
                android:title="@string/back_profiles"/>
            <item android:id="@+id/nav_item_signout"
                android:icon="@drawable/ic_close"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>