<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_alignParentTop="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_de_la_familia"
            android:fontFamily="@font/andika_regular"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/familia_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/ejemplo_familia"
            android:textColorHint="@color/dark_grey"
            android:inputType="text"
            android:background="@drawable/text_box"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_ocupado"
            android:fontFamily="@font/andika_regular"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/red"
            android:visibility="visible"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_tutor"
            android:fontFamily="@font/andika_regular"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/tutor_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/ejemplo_nombre_tutor"
            android:textColorHint="@color/dark_grey"
            android:inputType="text"
            android:background="@drawable/text_box"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/andika_regular"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/ejemplo_correo"
            android:textColorHint="@color/dark_grey"
            android:inputType="textEmailAddress"
            android:background="@drawable/text_box"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advise_email"
            android:fontFamily="@font/andika_regular"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/andika_regular"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:inputType="textPassword"
            android:background="@drawable/text_box"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andika_regular"
            android:text="@string/password_advise"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repetir_password"
            android:fontFamily="@font/andika_regular"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:inputType="textPassword"
            android:background="@drawable/text_box"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_not_equals"
            android:fontFamily="@font/andika_regular"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/red"
            android:visibility="visible"
            />
        <TextView
            android:id="@+id/registrarse_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/andika_regular"
            android:text="@string/registrame"
            android:textSize="22sp"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/corners"
            />

    </LinearLayout>


</RelativeLayout>